# logging

./: CMakeLists.txt
demo/: CMakeLists.txt  main.cpp
libs/: CMakeLists.txt  logger.cpp
libs/inc/: logger.h
